--- a/styles/global.css
+++ b/styles/global.css
@@ -8,6 +8,7 @@
     /* Brand #006AFF */
     --brand: hsla(215, 100%, 50%);
     --white: "#fcfcfd";
+    --whiteBase-80: hsla(240, 20%, 99%, 0.8);
     --light-theme-bg: "#fcfcfd";
     /* hsla(215, 100%, 8%) */
     --dark-theme-bg: "#001129";
@@ -69,10 +70,6 @@
   }
   body {
     text-rendering: optimizeLegibility;
-  }
-
-  p {
-    @apply text-blue-900 dark:text-blue-100;
   }
 }
 
@@ -319,25 +316,6 @@ html {
   background-position: center;
   background-repeat: no-repeat;
 }
-/* @keyframes bounce {
-  0%,
-  20%,
-  50%,
-  80%,
-  100% {
-    transform: translateY(0);
-  }
-  40% {
-    transform: translateY(-30px);
-  }
-  60% {
-    transform: translateY(-15px);
-  }
-} */
-
-.arrow-bounce {
-  animation: bounce 1600ms infinite cubic-bezier(0.445, 0.05, 0.55, 0.95);
-}
 
 .fabWrap {
   align-items: center;
@@ -377,7 +355,7 @@ html {
   width: 56px;
 }
 
-@keyframes bounce {
+/* @keyframes bounce {
   0%,
   100% {
     transform: translateY(-25%);
@@ -387,37 +365,21 @@ html {
     transform: none;
     animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
   }
+} */
+.fab-arrow--filter-dark {
+  filter: drop-shadow(0px 1px 2px theme("colors.blue.900"));
 }
+.fab-arrow--filter-light {
+  filter: drop-shadow(0px 1px 2px theme("colors.white"));
+}
+
 .bounce-animation {
-  animation: bounce 0.5s infinite;
+  animation: bounce 1s infinite;
 }
-
-/* .fabIconArrow {
-  color: theme("colors.blue.900");
-  font-size: 2em;
-  animation: bounce 3s infinite;
-} */
-
-/* .arrow-bounce {
-  transform-origin: 0% 0%;
-}
-
-.arrow-bounce:after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  bottom: 0;
-  left: 100%;
-  border-radius: 5px;
-  background: black;
-  transform: rotate(-90deg);
-  transform-origin: 0% 100%;
-} */
 
 @keyframes bounce {
   50% {
-    transform: translateY(-15px);
+    transform: translateY(-10px);
   }
 }
 
@@ -459,7 +421,7 @@ html {
 #navbar {
   top: 3.5rem;
   height: 4rem;
-  box-shadow: 0 2px 4px rgb(3 27 78 / 10%);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.125);
 }
 
 .nav-appear-transition {
@@ -794,4 +756,25 @@ html {
   border-radius: 12px !important;
   box-shadow: 0 4px 8px rgba(0, 9, 61, 0.24) !important;
   transform: translateZ(calc(-6 * 1px)) !important;
+}
+
+.toggle {
+  width: 50px;
+  display: flex;
+  padding: 5px;
+  display: block;
+  border-radius: 1000px;
+  cursor: pointer;
+  box-shadow: 0px 5px 20px -10px #000000;
+  transition: background-color 0.2s ease-in;
+}
+.toggle-inner {
+  width: 20px;
+  height: 15px;
+  border-radius: 1000px;
+  transition: margin-left 0.2s ease-in, background-color 0.2s ease-in;
+}
+.toggleActive {
+  margin-left: 20px;
+  transition: margin-left 0.2s ease-in, background-color 0.2s ease-in;
 }
