--- a/styles/global.css
+++ b/styles/global.css
@@ -80,8 +80,24 @@
   .max-w-960 {
     max-width: 960px;
   }
+  .width-960 {
+    margin-left: auto;
+    margin-right: auto;
+    width: 960px;
+  }
   .BgGray200 {
     background-color: theme("colors.gray.200");
+  }
+  .prose h1,
+  .prose h2 {
+    margin-bottom: 1rem;
+  }
+  /* .prose h1 {
+    margin-bottom: 1rem;
+  } */
+  .prose hr {
+    margin-top: 0;
+    margin-bottom: 1rem;
   }
 }
 
@@ -425,7 +441,7 @@ html {
   letter-spacing: -0.02em;
 }
 #navbar {
-  top: 3.5rem;
+  top: 0;
   height: 4rem;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.125);
 }
@@ -865,4 +881,42 @@ html {
 
 .white-text {
   color: #fcfcfd !important;
+}
+
+.article--text {
+  @apply px-6   lg:prose-lg dark:text-gray-300 text-blue-900;
+}
+
+.article--heading {
+  @apply px-6 prose lg:prose-lg text-blue-500 font-bold;
+}
+
+h2.seo.seo-title {
+  @apply mt-8 uppercase tracking-wide text-sm lg:text-sm text-sky-500 dark:text-sky-300 font-semibold;
+}
+
+p.section--heading {
+  font-weight: 700;
+  font-size: 1.5em;
+  margin-top: 2em;
+  line-height: 1.3333333;
+  margin-bottom: 1rem !important;
+  color: #0069ff !important;
+}
+
+@lg {
+  p.article.section--heading {
+    font-weight: 700;
+    font-size: 1.6666667em;
+    margin-top: 1.8666667em;
+    margin-bottom: 1rem !important;
+    line-height: 1.3333333;
+    color: #0069ff !important;
+  }
+}
+
+.article-section--divider {
+  max-width: 56rem;
+  margin-top: 0 !important;
+  margin-bottom: 1rem !important;
 }
