--- a/styles/global.css
+++ b/styles/global.css
@@ -442,6 +442,8 @@ article.section-content > h1.seo.seo-title {
   letter-spacing: -0.02em;
 }
 #navbar {
+  /* top: 2rem;
+  height: 4rem; */
   top: 0;
   height: 4rem;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.125);
@@ -884,13 +886,15 @@ article.section-content > h1.seo.seo-title {
   color: #fcfcfd !important;
 }
 
-.article--text {
+/* Error Code lg:prose-lg should be in the html not css  */
+
+/* .article--text {
   @apply px-6   lg:prose-lg dark:text-gray-300 text-blue-900;
 }
 
 .article--heading {
   @apply px-6 prose lg:prose-lg text-blue-500 font-bold;
-}
+} */
 
 article.section-content > h2.seo.seo-title {
   @apply mt-8 uppercase tracking-wide text-sm lg:text-sm text-sky-500 dark:text-sky-300 font-semibold mb-0;
